:hammer: crud base creation through interfaces and implementation in controllers
