# schemas/project.go
@@ -1,0 +1,11 @@
+package schemas
+
+type Project struct {
+	Name        string `json:"name"`
+	Description string `json:"description"`
+}
+
+type ProjectUpdate struct {
+	Name        *string `json:"name"`
+	Description *string `json:"description"`
+}
