# schemas/role.go
@@ -1,0 +1,9 @@
+package schemas
+
+type Role struct {
+	Name string `json:"name"`
+}
+
+type RoleUpdate struct {
+	Name *string `json:"name"`
+}
